# chutes-api

./: .gitignore  Dockerfile  balance_refresher.py  cacher.py  chute_autoscaler.py  conn_prober.py  log_prober.py  pyproject.toml  watchtower.py
.github/workflows/: lint.yml
api/: affine.py  constants.py  exceptions.py  gpu.py  graval_worker.py  guesser.py  main.py  metasync.py  miner_client.py  model_routing.py  rate_limit.py  redis_pubsub.py  safe_redis.py  util.py
api/api_key/: util.py
api/bounty/: router.py  util.py
api/chute/: codecheck.py  response.py  router.py  schemas.py  teeify.py  util.py
api/config/: __init__.py
api/database/: __init__.py  orms.py
api/e2e/: router.py
api/image/: forge.py  router.py  schemas.py  util.py
api/instance/: connection.py  response.py  router.py  schemas.py  util.py
api/invocation/: router.py  util.py
api/job/: router.py
api/metrics/: aema.py  capacity.py  perf.py  util.py
api/migrations/: 20250207120000_instances_deployment_id.sql  20251030165517_populate_servers.sql  20251102184128_populate_launch_config_env_type.sql  20260115120000_server_attestation_measurement_version.sql  20260115120100_boot_attestation_measurement_version.sql  20260131120000_luks_volume_passphrases_jsonb.sql  20260131120100_servers_vm_name.sql  20260218120000_model_aliases.sql
api/miner/: router.py  util.py
api/misc/: router.py
api/model_alias/: router.py  schemas.py
api/node/: router.py  schemas.py  util.py
api/payment/: router.py  schemas.py  usage_tracker.py
api/secret/: router.py
api/server/: client.py  exceptions.py  quote.py  router.py  schemas.py  service.py  util.py
api/user/: router.py  schemas.py  service.py  util.py
charts/templates/: api-deployment.yaml  forge-deployment.yaml  tee-measurements-cm.yaml
config/: tee_measurements.yaml.example
docs/: tee-verification.md
makefiles/: lint.mk
metasync/: config.py  constants.py  database.py  shared.py  sync_metagraph.py
scripts/: cache_hit_classifier.py  get_logs.py  test_e2e_client.py  update_sglang.py  update_vllm.py
tests/integration/: test_cosign.py
tests/unit/: test_server_service.py  test_server_utils.py  test_teeify.py
