[project]
name = "chutes-api"
version = "0.0.1"
description = "chutes.ai API/validator"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Chutes Global Corp", email = "dev@chutes.ai" },
]
requires-python = ">=3.10,<3.13"

dependencies = [
  "aiohttp>=3.13.2,<4.0.0",
  "backoff>=2.2.1,<3.0.0",
  "requests>=2.32.5,<3.0.0",
  "loguru>=0.7.3,<0.8.0",
  "fastapi>=0.124.0,<0.125.0",
  "uvicorn>=0.38.0,<0.39.0",
  "pybase64>=1.4.3,<2.0.0",
  "orjson>=3.11.5,<4.0.0",
  "SQLAlchemy==2.0.44",
  "pydantic-settings>=2.12.0,<3.0.0",
  "asyncpg>=0.31.0,<0.32.0",
  "passlib>=1.7.4,<2.0.0",
  "python-multipart==0.0.20",
  # Poetry's git syntax isn't PEP 508; convert to direct reference:
  "taskiq-redis @ git+https://github.com/taskiq-python/taskiq-redis.git@d303934efd1aba5e4f3475455ddee2fe495a4303",
  "fickling>=0.1.5,<0.2.0",
  "setuptools>=75.3.0,<76.0.0",
  "py-bip39-bindings>=0.3.0,<0.4.0",
  "argon2-cffi>=25.1.0,<26.0.0",
  "python-slugify[unidecode]>=8.0.4,<9.0.0",
  "async-lru>=2.0.5,<3.0.0",
  "aiodns>=3.6.0,<4.0.0",
  "chutes==0.5.5rc45",
  "python-socketio[asyncio-client]>=5.15.0,<6.0.0",
  "pillow>=12.0.0,<13.0.0",
  "aioboto3==15.5.0",
  "py-ed25519-zebra-bindings==1.3.0",
  "jinja2>=3.1.6,<4.0.0",
  "pyjwt>=2.10.1,<3.0.0",
  "aiocache>=0.12.3,<0.13.0",
  "ruff>=0.14.8,<0.15.0",
  "async-substrate-interface>=1.4.0",
  "transformers<4.49.0",
  "dnslib>=0.9.26,<0.10.0",
  "semver>=3.0.4,<4.0.0",
  "bittensor-wallet>=4.0.1",
  "dcap-qvl==0.3.12",
  "huggingface-hub==0.34.6",
  "tokenizers==0.21.4",
  "redis>=7.0,<7.1",
  "uvloop>=0.22.1",
  "httptools>=0.7.1",
  "bittensor-drand>=1.2.0",
  "pyyaml>=6.0.1,<7.0.0",
  "httpx[http2]>=0.28.0,<0.29.0",
]

# Dev dependencies go under optional-dependencies
[project.optional-dependencies]
dev = [
  "pytest>=8.3.3,<9.0.0",
  "pytest-cov>=6.0.0,<7.0.0",
  "greenlet>=3.1.1,<4.0.0",
  "ipykernel>=6.29.5,<7.0.0",
  "typer>=0.12.5,<0.13.0",
  "pytest-asyncio>=1.1.0,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "metasync"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
# Make sure uv knows to use editable installs for this project if you like
# (optional; uv works fine without this)
# editable = true

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["E402"]
"**/conftest.py" = ["E401", "E402"]

[tool.ruff]
extend-exclude = ["nv-attest"]
